--- a/css/styles.css
+++ b/css/styles.css
@@ -5,26 +5,31 @@
 }
 
 body {
-  margin-top: 100px;
+  margin-top: 50px;
 }
 
 h1,
 h2,
 h3 {
+  text-align: center;
   margin: 0;
 }
 
 h1 {
   font-size: 96px;
+  padding-top: 35px;
 }
 
 h2 {
+  padding-top: 100px;
   font-size: 48px;
+  margin: 0;
 }
 
 h3 {
   font-size: 24px;
   opacity: 0.7;
+  padding-top: 10px;
 }
 
 p {
@@ -40,7 +45,9 @@ p {
 
 .navigation-links a {
   margin: 20px;
+  text-decoration: none;
 }
+
 
 .primary-link {
   border-radius: 4px;
@@ -86,5 +93,4 @@ p {
 .email-link:hover {
   text-decoration: underline;
 }
-
 
